--- a/css/style.css
+++ b/css/style.css
@@ -45,14 +45,6 @@ body {
   color:#2a2a2b;
 }
 
-h1 {
-  /* margin: 0 auto;
-  width: 100%;
-  position: fixed;
-  top: 40%; */
-  color: #3F72AF;
-}
-
 #site-wrapper{
   margin: 0 4%;
   max-width: 1280px;
@@ -63,16 +55,49 @@ h1 {
   width: auto;
 }
 
-/* --------------------------
- Container
- ----------------------------- */
-a {
+h1 {
+  /* margin: 0 auto;
+  width: 100%;
+  position: fixed;
+  top: 40%; */
+  color: #3F72AF;
+}
+
+/* a {
   color: #F9F7F7;
   text-decoration: none;
 }
 
 a:hover {
   color: #DBE2EF;
+} */
+
+a {
+  color: #3F72AF;
+}
+
+a:hover {
+  text-decoration: underline;
+  color: #112D4E;
+}
+
+p {
+  /* color: #3F72AF; */
+  color: #2a2a2b;
+  /* font-size: 0.9em; */
+  /* line-height: 25px; */
+  margin-bottom: 0;
+  margin-left: 5%;
+  margin-top: 0;
+}
+
+/* --------------------------
+ Classe generique
+ ----------------------------- */
+
+.justifier {
+  text-align: justify;
+  text-justify: inter-word;
 }
 
 /* --------------------------
@@ -164,23 +189,13 @@ section:first-of-type{
   padding-top: 40px;
 }
 
-section a {
+/* section a {
   color: #3F72AF;
 }
 section a:hover {
   text-decoration: underline;
   color: #112D4E;
-}
-
-p {
-  /* color: #3F72AF; */
-  color: #2a2a2b;
-  /* font-size: 0.9em; */
-  /* line-height: 25px; */
-  margin-bottom: 0;
-  margin-left: 5%;
-  margin-top: 0;
-}
+} */
 
 @media (min-width: 768px) {
 }
@@ -219,6 +234,10 @@ ul.simpleList li {
   padding: 1em 2em;
   display: flex;
   align-items: center;
+  /* background-color: #f7f7f7; */
+  /* border-radius: 10px; */
+  /* margin: 1em; */
+  /* border: 1px solid #bebebe; */
 }
 
 .Media p {
@@ -281,3 +300,103 @@ ul.simpleList li {
     display: inline;
   }
 }
+
+/* --------------------------
+ Project page
+ ----------------------------- */
+ .ProjectPage{
+   width: 60%;
+   margin: 0px auto;
+ }
+
+ .ProjectTitle{
+   text-align: center;
+   padding: 0.6em 0 0.2em 0;
+   line-height: normal;
+ }
+
+ .ProjectAuthors a{
+   color: #2a2a2b;
+   font-weight: bold;
+ }
+
+ .ProjectAuthors{
+   text-align: center;
+   /* padding: 1em 0px; */
+ }
+
+ .ProjectImage{
+  width: 100%;
+  padding: 3em 0 1em 0;
+ }
+
+code{
+   background-color: #f6f6f6;
+   display: block;
+   overflow: auto;
+   padding: 1em;
+   border-radius: 5px;
+   border: 1px solid #ddd;
+   line-height: 1.4em;
+}
+
+.card_container{
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.card {
+  /**box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);**/
+  /**transition: 0.3s;**/
+  width: 16%;
+  max-width: 120px;
+  min-width: 100px;
+  margin-left: 5%;
+  margin-top: 20px;
+  text-align: center;
+  font-weight: bold;
+  border-radius: 6px;
+
+  -webkit-box-shadow: 0 0 10px rgba(0,0,0,.1);
+  box-shadow: 0 0 10px rgba(0,0,0,.1);
+  -webkit-transition: -webkit-transform .3s cubic-bezier(.16,1,.99,.99);
+  transition: -webkit-transform .3s cubic-bezier(.16,1,.99,.99);
+  -o-transition: transform cubic-bezier(.16,1,.99,.99) .3s;
+  transition: transform .3s cubic-bezier(.16,1,.99,.99);
+  transition: transform .3s cubic-bezier(.16,1,.99,.99),-webkit-transform .3s cubic-bezier(.16,1,.99,.99);
+
+}
+
+.card:hover {
+  /**box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);**/
+  -webkit-transform: scale(1.03) ;
+  -ms-transform: scale(1.03) ;
+  transform: scale(1.03) ;
+  -webkit-box-shadow: 0 0 20px rgba(0,0,0,.2);
+  box-shadow: 0 0 20px rgba(0,0,0,.2)
+}
+
+.card img{
+  border-top-left-radius: inherit;
+  border-top-right-radius: inherit;
+}
+
+.card p{
+  margin: 0 0 5px 0;
+}
+
+.disabled_card{
+  font-style: italic;
+  font-weight: normal;
+  pointer-events: none;
+  opacity: 0.6;
+}
+
+.smalltext{
+  font-size: 0.7em;
+}
+
+.card a{
+  text-decoration: none;
+}
+
